handle constant